feat: new api logout
